# cursor-api

./: .env.example  .gitattributes  .gitignore  Cargo.toml  Dockerfile  README.md  build.rs  build_info.rs  config.example.toml  docker-compose.yml
.github/workflows/: build.yml  docker.yml
crates/__build/: Cargo.toml
crates/__build/src/: version.rs
crates/atomic_enum/: Cargo.toml
crates/atomic_enum/src/: lib.rs
crates/byte_str/: Cargo.toml
crates/byte_str/src/: lib.rs  serde_impls.rs  utf8.rs  view.rs
crates/byte_str/src/utf8/: ascii.rs  simd_funcs.rs
crates/grpc-stream/: Cargo.toml
crates/grpc-stream/src/: buffer.rs  compression.rs  decoder.rs  frame.rs  lib.rs
crates/interned/: Cargo.toml
crates/interned/src/: arc_str.rs  lib.rs  str.rs
crates/manually_init/: Cargo.toml
crates/proto-value/: Cargo.toml
crates/proto-value/src/: bytes_value.rs  enum_value.rs  is_default.rs  lib.rs  stringify.rs
crates/rep_move/src/: lib.rs
patch/dashmap/: Cargo.toml
patch/dashmap/src/: iter.rs  lib.rs  set.rs
patch/prost-0.14.1/: Cargo.toml
patch/prost-0.14.1/src/: encoding.rs  error.rs  lib.rs
patch/prost-derive/: Cargo.toml
patch/prost-derive/src/: lib.rs
patch/prost-types/: Cargo.toml
patch/prost-types/src/: duration.rs  lib.rs  timestamp.rs
patch/reqwest-0.12.18/: Cargo.toml
patch/reqwest-0.12.18/src/: lib.rs  tls.rs
patch/rustls-0.23.35/: Cargo.toml
patch/scc-3.4.8/: CHANGELOG.md  Cargo.toml  README.md
patch/scc-3.4.8/benches/: tree_index.rs
patch/scc-3.4.8/src/: async_helper.rs  hash_cache.rs  hash_index.rs  hash_map.rs  hash_table.rs  tree_index.rs
patch/sha2-0.11.0-rc.3/: Cargo.toml
patch/vsimd-0.8.0/src/: lib.rs
scripts/: build.sh  minify.js  package-lock.json  setup.sh
src/: app.rs  common.rs  core.rs  main.rs  natural_args.rs
src/app/: config.rs  constant.rs  frontend.rs  lazy.rs  model.rs  route.rs
src/app/constant/: header.rs
src/app/lazy/: log.rs  path.rs
src/app/model/: build_key.rs  checksum.rs  config.rs  context_fill_mode.rs  cpp.rs  cursor_version.rs  default_instructions.rs  dynamic_key.rs  fetch_model.rs  hash.rs  id_source.rs  log.rs  platform.rs  proxy.rs  (+9 more)
src/common/: client.rs  model.rs  time.rs  traits.rs  utils.rs
src/core/: adapter.rs  config.rs  constant.rs  error.rs  model.rs  route.rs  service.rs  session.rs
static/: api.html  build_key.html  config.html  logs.html  proxies.html  route-registry.schema.json  route_registry.json  shared-styles.css  shared.js  tokens.html
tests/data/: stream_data.txt
tools/get-token/: README.md
(+112 files in other folders)
