[package]
name = "interned"
version = "0.1.0"
edition.workspace = true
authors.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# HashMap implementation - enable nightly optimizations
# hashbrown = { version = "0.16", default-features = false, features = [
#     "nightly",     # SIMD optimization, unstable APIs
#     "raw-entry",   # For advanced HashMap operations
#     "inline-more", # More aggressive inlining optimization
#     "equivalent",
#     #"allocator-api2",    # Custom allocator support
# ] }

# RwLock implementation - enable performance optimizations
# parking_lot = { version = "0.12", features = [
#     "nightly",               # Unstable optimizations
#     "hardware-lock-elision", # Intel TSX hardware lock optimization (if available)
#     #"send_guard",            # Allow passing MutexGuard across threads
# ] }

# dashmap = { path = "../../patch/dashmap", features = ["inline-more"] }

scc = { version = "3.4.8", features = ["equivalent"] }

# Hash algorithm - enable hardware acceleration
ahash = { version = "0.8", default-features = false, features = [
    "runtime-rng", # Runtime random seed (secure)
    #"nightly-arm-aes", # ARM AES instruction optimization
] }

manually_init.workspace = true

serde_core = { version = "1", default-features = false, optional = true }

rkyv = { version = "0.8", default-features = false, optional = true }

[features]
default = []
nightly = []
serde = ["dep:serde_core"]
rkyv = ["dep:rkyv"]

#[profile.release]
#opt-level = 3
#lto = "fat"       # Global LTO
#codegen-units = 1 # Single codegen unit, maximum optimization
#panic = "abort"   # Reduce binary size
#strip = true      # Remove symbol information

#[profile.bench]
#inherits = "release"

# Nightly feature gating
[package.metadata.docs.rs]
rustc-args = ["--cfg", "docsrs"]
all-features = true
